--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,32 +4,25 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=701,-752
-ViewportId=0x3DD03744
-Pos=0,290
-Size=178,418
+Pos=668,318
+Size=208,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=701,-752
-ViewportId=0x3DD03744
-Pos=180,41
-Size=369,667
+Pos=878,69
+Size=339,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=701,-752
-ViewportId=0x3DD03744
-Pos=0,41
-Size=178,247
+Pos=668,69
+Size=208,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=701,-752
-ViewportId=0x3DD03744
+Pos=668,28
 Size=549,39
 Collapsed=0
 DockId=0x00000006,0
@@ -83,11 +76,11 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=701,-752 Size=549,708 Split=Y
+DockNode        ID=0x00000002 Pos=686,69 Size=549,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=208,657 Split=Y Selected=0x81F08B44
       DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=203,247 Selected=0x81F08B44
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=203,418 Selected=0xB61D20C0
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=449,657 Selected=0xE5053174
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=339,657 Selected=0xE5053174
 
