--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,25 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-Pos=668,318
+ViewportPos=764,-858
+ViewportId=0x3DD03744
+Pos=0,290
 Size=208,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=878,69
+ViewportPos=764,-858
+ViewportId=0x3DD03744
+Pos=210,41
 Size=339,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=668,69
+ViewportPos=764,-858
+ViewportId=0x3DD03744
+Pos=0,41
 Size=208,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=668,28
+ViewportPos=764,-858
+ViewportId=0x3DD03744
 Size=549,39
 Collapsed=0
 DockId=0x00000006,0
@@ -58,7 +65,7 @@ Size=300,500
 Collapsed=0
 
 [Window][Texture List##List]
-Pos=490,122
+Pos=490,123
 Size=300,500
 Collapsed=0
 
@@ -75,8 +82,13 @@ ViewportId=0x461BAAB2
 Size=300,500
 Collapsed=0
 
+[Window][MeshData List##List]
+Pos=490,122
+Size=300,500
+Collapsed=0
+
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=686,69 Size=549,708 Split=Y
+DockNode        ID=0x00000002 Pos=764,-858 Size=549,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=208,657 Split=Y Selected=0x81F08B44
